<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visualizer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBlue"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".ui.Visualizer">
...
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="6">

        <EditText
            android:id="@+id/input_nodes"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            android:ems="10"
            android:gravity="center"
            android:hint="0 - 999"
            android:inputType="number"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/button_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/visulizer_button"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/button_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/visulizer_button"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:id="@+id/button_redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@drawable/visulizer_button"
            android:scaleType="fitXY"
            android:scaleX="-1"
...
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_weight="6">
        <Spinner
            android:id="@+id/spinner_traversal"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
            android:padding="5dp"
            android:src="@android:drawable/ic_media_previous"
            android:background="@drawable/visulizer_button"/>

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
            android:src="@android:drawable/ic_media_next"
            android:background="@drawable/visulizer_button"/>

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
            android:src="@android:drawable/ic_media_play"
            android:background="@drawable/visulizer_button"/>

        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_pause"
...
            android:layout_gravity="top"
            android:layout_marginRight="15dp"
            android:textSize="15sp"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:gravity="center"
        android:layout_margin="5dp">
...
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/visulizer_button"
            android:textColor="@color/backgroundWhite"
            android:text="Load"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button_save"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/visulizer_button"
            android:text="Clear"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/backgroundWhite"
            android:textSize="20sp" />
        <ImageButton
            android:id="@+id/button_info"
...
