<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/fileDialog_fileName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="File Name" />
        <Button
            android:id="@+id/fileDialog_renameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rename"
            android:textAllCaps="false"
            android:background="@drawable/homepage_button"
            android:textColor="@color/textHomepageButtons"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fileDialog_deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textAllCaps="false"
            android:background="@drawable/homepage_button"
            android:textColor="@color/textHomepageButtons"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/fileDialog_loadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Load"
            android:textAllCaps="false"
            android:background="@drawable/homepage_button"
            android:textColor="@color/textHomepageButtons"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fileDialog_cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textAllCaps="false"
            android:background="@drawable/homepage_button"
            android:textColor="@color/textHomepageButtons"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>