...
    android:background="@color/backgroundRed"
    android:clickable="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filesRecycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/files_view"
            />

        </ScrollView>
...
